--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,19 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+/ProjetTAL_VS/ProjetTAL_VS/Rapport/strat.dvi
+/ProjetTAL_VS/ProjetTAL_VS/Rapport/strat.blg
+/ProjetTAL_VS/ProjetTAL_VS/Rapport/strat.bbl
+/ProjetTAL_VS/ProjetTAL_VS/Rapport/strat.aux
+/ProjetTAL_VS/ProjetTAL_VS/Rapport/latex_template.dvi
+/ProjetTAL_VS/ProjetTAL_VS/Rapport/latex_template.blg
+/ProjetTAL_VS/ProjetTAL_VS/Rapport/latex_template.bbl
+/ProjetTAL_VS/ProjetTAL_VS/Rapport/latex_template.aux
+/ProjetTAL_VS/ProjetTAL_VS/Rapport/strat.dvi
+/ProjetTAL_VS/ProjetTAL_VS/Rapport/strat.blg
+/ProjetTAL_VS/ProjetTAL_VS/Rapport/strat.bbl
+/ProjetTAL_VS/ProjetTAL_VS/Rapport/strat.aux
+/ProjetTAL_VS/ProjetTAL_VS/Rapport/latex_template.dvi
+/ProjetTAL_VS/ProjetTAL_VS/Rapport/latex_template.blg
+/ProjetTAL_VS/ProjetTAL_VS/Rapport/latex_template.bbl
+/ProjetTAL_VS/ProjetTAL_VS/Rapport/latex_template.aux
